# icdar21-mapseg-eval

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml  task3_point_detect_eval_demo.ipynb
.github/workflows/: python-package.yml  python-publish.yml
icdar21_mapseg_eval/: __init__.py  __main__.py  cli.py  coco.py  haussdorff.py  iou.py  point_detection.py
notebooks/: task3_point_detect_eval_demo.ipynb
tests/: test_coco.py  test_hausdorff.py  test_icdar21_mapseg_eval.py  test_point_detection.py
