[tool.poetry]
name = "icdar21-mapseg-eval"
version = "0.1.0"
description = "Evaluation tools for ICDAR21 Competition on Historical Map Segmentation (MapSeg)."
authors = ["icdar21-mapseg-contact(at)googlegroups.com"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
