[tool.poetry]
name = "icdar21-mapseg-eval"
version = "0.1.0"
description = "Evaluation tools for ICDAR21 Competition on Historical Map Segmentation (MapSeg)."
authors = ["icdar21-mapseg-contact(at)googlegroups.com"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
numpy = "^1.20.1"
scipy = "^1.6.1"
scikit-image = "^0.18.1"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
icdar21-mapseg-eval = 'icdar21_mapseg_eval:main'
