[tool.poetry]
name = "icdar21-mapseg-eval"
version = "1.0.2"
description = "Evaluation tools for ICDAR21 Competition on Historical Map Segmentation (MapSeg)."
authors = ["icdar21-mapseg-contact(at)googlegroups.com"]
license = "MIT"
readme = "README.md"
homepage = "https://icdar21-mapseg.github.io/"
repository = "https://github.com/icdar21-mapseg/icdar21-mapseg-eval"
documentation = "https://github.com/icdar21-mapseg/icdar21-mapseg-eval/blob/main/README.md"
keywords = ["evaluation", "map", "image segmentation", "research", "icdar21"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/icdar21-mapseg/icdar21-mapseg-eval/issues"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
numpy = "^1.20.1"
scipy = "^1.6.1"
scikit-image = "^0.18.1"
matplotlib = "^3.3.4"
progress = "*"
pandas = "^1.1"
PyQt5 = {version = "^5.15.4", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.9.0"
pylint = "^2.7.2"

[tool.poetry.extras]
visualisation = ["PyQt5"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
icdar21-mapseg-eval = 'icdar21_mapseg_eval:main'
